--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
   </head>
   <body>
     <!-- HEADER SECTION -->
-    <header class="page-header">
+    <header class="header">
       <div class="container header-container">
-        <nav class="page-navigation">
-          <a class="logotype link" href="./index.html"
+        <nav class="header-nav">
+          <a class="header-logo link" href="./index.html"
             >Web<span class="accent">Studio</span></a
           >
-          <ul class="menu list">
-            <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Studio</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link header-link-active link" href="./index.html"
+                >Studio</a
+              >
             </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Portfolio</a>
+            <li class="header-item">
+              <a class="header-link link" href="">Portfolio</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Contacts</a>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -75,28 +77,48 @@
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantage-list list">
-            <li class="advantage link">
+            <li class="advantage-link link">
+              <div class="advantage-svg-container">
+                <svg class="advantage-item-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Strategy</h3>
               <p class="advantage-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="advantage link">
+            <li class="advantage-link link">
+              <div class="advantage-svg-container">
+                <svg class="advantage-item-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Punctuality</h3>
               <p class="advantage-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="advantage link">
+            <li class="advantage-link link">
+              <div class="advantage-svg-container">
+                <svg class="advantage-item-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Diligence</h3>
               <p class="advantage-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="advantage link">
+            <li class="advantage-link link">
+              <div class="advantage-svg-container">
+                <svg class="advantage-item-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantage-title">Technologies</h3>
               <p class="advantage-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -123,6 +145,58 @@
               <div class="team-info">
                 <h3 class="team-profile">Mark Guerrero</h3>
                 <p class="team-profile-info">Product Designer</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card-link">
@@ -136,6 +210,58 @@
               <div class="team-info">
                 <h3 class="team-profile">Tom Ford</h3>
                 <p class="team-profile-info">Frontend Developer</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card-link">
@@ -149,6 +275,58 @@
               <div class="team-info">
                 <h3 class="team-profile">Camila Garcia</h3>
                 <p class="team-profile-info">Marketing</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card-link">
@@ -162,6 +340,58 @@
               <div class="team-info">
                 <h3 class="team-profile">Daniel Wilson</h3>
                 <p class="team-profile-info">UI Designer</p>
+                <ul class="social-links list">
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://twitter.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-item" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -174,13 +404,21 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-link">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="box-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="project-information">
                 <h3 class="project">Banking App Interface Concept</h3>
                 <p class="project-info">App</p>
@@ -257,15 +495,62 @@
     </main>
 
     <!-- FOOTER SECTION -->
-    <footer class="page-footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+    <footer class="footer">
+      <div class="footer-container container">
+        <div class="footer-text-container">
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-container">
+          <p class="social-media-title">Social media</p>
+          <ul class="footer-social-media-list list">
+            <li class="footer-list-item">
+              <a
+                class="footer-link link"
+                href="https://www.instagram.com/"
+                target="_blank"
+                ><svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-item">
+              <a
+                class="footer-link link"
+                href="https://twitter.com/"
+                target="_blank"
+                ><svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-item">
+              <a
+                class="footer-link link"
+                href="https://www.facebook.com/"
+                target="_blank"
+                ><svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-item">
+              <a
+                class="footer-link link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                ><svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
