--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <li class="advantage-link link">
               <div class="advantage-svg-container">
                 <svg class="advantage-item-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="advantage-title">Strategy</h3>
@@ -92,7 +92,7 @@
             <li class="advantage-link link">
               <div class="advantage-svg-container">
                 <svg class="advantage-item-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="advantage-title">Punctuality</h3>
@@ -104,7 +104,7 @@
             <li class="advantage-link link">
               <div class="advantage-svg-container">
                 <svg class="advantage-item-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="advantage-title">Diligence</h3>
@@ -116,7 +116,7 @@
             <li class="advantage-link link">
               <div class="advantage-svg-container">
                 <svg class="advantage-item-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="advantage-title">Technologies</h3>
@@ -153,9 +153,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -166,7 +164,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -177,9 +175,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -190,9 +186,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -218,9 +212,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,7 +223,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -242,9 +234,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -255,9 +245,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -283,9 +271,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -296,7 +282,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -307,9 +293,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -320,9 +304,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -348,9 +330,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -361,7 +341,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -372,9 +352,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -385,9 +363,7 @@
                       target="_blank"
                     >
                       <svg class="social-link-item" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -425,65 +401,105 @@
               </div>
             </li>
             <li class="portfolio-link">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="box-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="project-information">
                 <h3 class="project">Cashless Payment</h3>
                 <p class="project-info">Marketing</p>
               </div>
             </li>
             <li class="portfolio-link">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="box-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="project-information">
                 <h3 class="project">Meditation App</h3>
                 <p class="project-info">App</p>
               </div>
             </li>
             <li class="portfolio-link">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="box-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="project-information">
                 <h3 class="project">Taxi Service</h3>
                 <p class="project-info">Marketing</p>
               </div>
             </li>
             <li class="portfolio-link">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="box-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="project-information">
                 <h3 class="project">Screen Illustrations</h3>
                 <p class="project-info">Design</p>
               </div>
             </li>
             <li class="portfolio-link">
-              <img
-                class="portfolio-image"
-                src="./images/portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="box-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="project-information">
                 <h3 class="project">Online Courses</h3>
                 <p class="project-info">Marketing</p>
@@ -515,7 +531,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 ><svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
@@ -525,7 +541,7 @@
                 href="https://twitter.com/"
                 target="_blank"
                 ><svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -535,7 +551,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
                 ><svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -545,7 +561,7 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
                 ><svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
