create html css

--- a/index.html
+++ b/index.html
@@ -152,7 +152,12 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -163,7 +168,12 @@
                       href="https://twitter.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -174,7 +184,12 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -185,7 +200,12 @@
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -211,7 +231,12 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -222,7 +247,12 @@
                       href="https://twitter.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -233,7 +263,12 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -244,7 +279,12 @@
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -270,7 +310,12 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -281,7 +326,12 @@
                       href="https://twitter.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -292,7 +342,12 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -303,7 +358,12 @@
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -329,7 +389,12 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Instagram"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -340,7 +405,12 @@
                       href="https://twitter.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Twitter"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -351,7 +421,12 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Facebook"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -362,7 +437,12 @@
                       href="https://www.linkedin.com/"
                       target="_blank"
                     >
-                      <svg class="social-link-item" width="16" height="16">
+                      <svg
+                        class="social-link-item"
+                        width="16"
+                        height="16"
+                        aria-label="Linkedin"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -530,7 +610,12 @@
                 class="footer-link link"
                 href="https://www.instagram.com/"
                 target="_blank"
-                ><svg class="footer-icon" width="24" height="24">
+                ><svg
+                  class="footer-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Instagram"
+                >
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
@@ -540,7 +625,12 @@
                 class="footer-link link"
                 href="https://twitter.com/"
                 target="_blank"
-                ><svg class="footer-icon" width="24" height="24">
+                ><svg
+                  class="footer-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Twitter"
+                >
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -550,7 +640,12 @@
                 class="footer-link link"
                 href="https://www.facebook.com/"
                 target="_blank"
-                ><svg class="footer-icon" width="24" height="24">
+                ><svg
+                  class="footer-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Facebook"
+                >
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -560,7 +655,12 @@
                 class="footer-link link"
                 href="https://www.linkedin.com/"
                 target="_blank"
-                ><svg class="footer-icon" width="24" height="24">
+                ><svg
+                  class="footer-icon"
+                  width="24"
+                  height="24"
+                  aria-label="Linkedin"
+                >
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
